--- a/index.html
+++ b/index.html
@@ -5,73 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- custom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body>
+  <body class="page">
     <!-- header block -->
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header-nav">
         <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Studio</a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="header-item">
+            <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item">
+            <a class="address-contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="address-item">
+            <a class="address-contact" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <!-- main block -->
-    <main>
+    <main class="main">
       <!-- hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <!-- features section -->
-      <section>
+      <section class="section features">
         <h2 hidden>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -80,27 +86,30 @@
       </section>
 
       <!-- what we are doing section -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="section doing">
+        <h2 class="title-doing">What are we doing</h2>
+        <ul class="list-doing">
+          <li class="item-doing">
             <img
+              class="img-doing"
               src="./images/section-3/wwad-1.jpg"
               alt="computer"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="item-doing">
             <img
+              class="img-doing"
               src="./images/section-3/wwad-2.jpg"
               alt="smartphone"
               width="360"
               height="300"
             />
           </li>
-          <li>
+          <li class="item-doing">
             <img
+              class="img-doing"
               src="./images/section-3/wwad-3.jpg"
               alt="smartphone in hand"
               width="360"
@@ -111,57 +120,62 @@
       </section>
 
       <!-- team section -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
+      <section class="section team">
+        <h2 class="title-team">Our Team</h2>
+        <ul class="list-team">
+          <li class="item-team">
+            <img class="img-team"
               src="./images/section-4/team1.jpg"
               alt="smiling man"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name-team">Mark Guerrero</h3>
+            <p class="position-team">Product Designer</p>
           </li>
-          <li>
-            <img
+          <li class="item-team">
+            <img class="img-team"
               src="./images/section-4/team2.jpg"
               alt="smiling man 2"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-team">Tom Ford</h3>
+            <p class="position-team">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
+              class="img-team"
               src="./images/section-4/team3.jpg"
               alt="young woman"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name-team">Camila Garcia</h3>
+            <p class="position-team">Marketing</p>
           </li>
-          <li>
+          <li class="item-team">
             <img
+              class="img-team"
               src="./images/section-4/team4.jpg"
               alt="smiling man 3"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name-team">Daniel Wilson</h3>
+            <p class="position-team">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- footer block -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html">WebStudio</a>
+      <p class="clogan-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
