--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body class="page">
+  <body  class="page">
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"><span class="header-logo-text">Web</span>Studio</a>
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
@@ -45,13 +45,13 @@
     <!-- main block -->
     <main class="main">
       <!-- hero section -->
-      <section class="section hero">
+      <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <!-- features section -->
-      <section class="section features">
+      <section class="features">
         <h2 hidden>Features</h2>
         <ul class="features-list">
           <li class="features-item">
@@ -86,7 +86,7 @@
       </section>
 
       <!-- what we are doing section -->
-      <section class="section doing">
+      <section class="doing">
         <h2 class="title-doing">What are we doing</h2>
         <ul class="list-doing">
           <li class="item-doing">
@@ -120,7 +120,7 @@
       </section>
 
       <!-- team section -->
-      <section class="section team">
+      <section class="team">
         <h2 class="title-team">Our Team</h2>
         <ul class="list-team">
           <li class="item-team">
@@ -171,7 +171,7 @@
 
     <!-- footer block -->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html">WebStudio</a>
+      <a class="logo-footer" href="./index.html"><span class="logo-footer-text">Web</span>Studio</a>
       <p class="clogan-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
