--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"><span class="header-logo-text">Web</span>Studio</a>
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
@@ -43,6 +43,7 @@
 
     <!-- main block -->
     <main class="main">
+
       <!-- Секція кнопок -->
       <section class="filter">
         <h1 hidden>picture filter</h1>
@@ -64,6 +65,7 @@
           </li>
         </ul>
       </section>
+
       <!-- секція картинок -->
       <section class="img">
         <ul class="list-img">
@@ -172,8 +174,11 @@
 
     <!-- footer block -->
     <footer class="footer">
-        <a class="logo-footer" href="./index.html">WebStudio</a>
-        <p class="clogan-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-      </footer>
+      <a class="logo-footer" href="./index.html"><span class="logo-footer-text">Web</span>Studio</a>
+      <p class="clogan-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
