стани кнопок та посилань

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="header-logo" href="./index.html"><span class="header-logo-text">Web</span>Studio</a>
         <ul class="header-list">
           <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class="header-link-active" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link" href="./portfolio.html">Portfolio</a>
