--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Webstudio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body  class="page">
+  <body class="page">
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html"><span class="header-logo-text">Web</span>Studio</a>
+        <a class="header-logo" href="./index.html"
+          ><span class="header-logo-text">Web</span>Studio</a
+        >
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link-active" href="./index.html">Studio</a>
@@ -124,7 +133,8 @@
         <h2 class="title-team">Our Team</h2>
         <ul class="list-team">
           <li class="item-team">
-            <img class="img-team"
+            <img
+              class="img-team"
               src="./images/section-4/team1.jpg"
               alt="smiling man"
               width="264"
@@ -134,7 +144,8 @@
             <p class="position-team">Product Designer</p>
           </li>
           <li class="item-team">
-            <img class="img-team"
+            <img
+              class="img-team"
               src="./images/section-4/team2.jpg"
               alt="smiling man 2"
               width="264"
@@ -171,7 +182,9 @@
 
     <!-- footer block -->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"><span class="logo-footer-text">Web</span>Studio</a>
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-footer-text">Web</span>Studio</a
+      >
       <p class="clogan-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
