--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -19,7 +24,9 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html"><span class="header-logo-text">Web</span>Studio</a>
+        <a class="header-logo" href="./index.html"
+          ><span class="header-logo-text">Web</span>Studio</a
+        >
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
@@ -50,7 +57,6 @@
 
     <!-- main block -->
     <main class="main">
-
       <!-- Секція кнопок -->
       <section class="filter">
         <h1 hidden>picture filter</h1>
@@ -181,7 +187,9 @@
 
     <!-- footer block -->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"><span class="logo-footer-text">Web</span>Studio</a>
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-footer-text">Web</span>Studio</a
+      >
       <p class="clogan-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
