--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -22,9 +25,7 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
-          ><span class="header-logo-text">Web</span>Studio</a
-        >
+        <a class="header-logo" href="./index.html"><span class="header-logo-text">Web</span>Studio</a>
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link-active" href="./index.html">Studio</a>
