прибрала зайві правила

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               height="260"
             />
             <h3 class="name-team">Mark Guerrero</h3>
-            <p class="position-team">Product Designer</p>
+            <p class="positionn-team">Product Designer</p>
           </li>
           <li class="item-team">
             <img
@@ -155,7 +155,7 @@
               height="260"
             />
             <h3 class="name-team">Tom Ford</h3>
-            <p class="position-team">Frontend Developer</p>
+            <p class="positionn-team">Frontend Developer</p>
           </li>
           <li class="item-team">
             <img
@@ -166,7 +166,7 @@
               height="260"
             />
             <h3 class="name-team">Camila Garcia</h3>
-            <p class="position-team">Marketing</p>
+            <p class="positionn-team">Marketing</p>
           </li>
           <li class="item-team">
             <img
@@ -177,7 +177,7 @@
               height="260"
             />
             <h3 class="name-team">Daniel Wilson</h3>
-            <p class="position-team">UI Designer</p>
+            <p class="positionn-team">UI Designer</p>
           </li>
         </ul>
       </section>
