--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
+        <a class="header-logo link" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link-active" href="./index.html">Studio</a>
