--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,7 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html"
-          ><span class="header-logo-text">Web</span>Studio</a
-        >
+        <a class="header-logo link" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
