--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <address class="address">
         <ul class="address-list">
           <li class="address-item">
-            <a class="address-contact" href="mailto:info@devstudio.com"
+            <a class="address-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="address-item">
-            <a class="address-contact" href="tel:+110001111111"
+            <a class="address-contact link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
