--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
             <a class="header-link-active" href="./index.html">Studio</a>
           </li>
