--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
