прибрала позначки кнопок

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li class="address-item">
             <a class="address-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -58,7 +58,7 @@
       <!-- Секція кнопок -->
       <section class="filter">
         <h1 hidden>picture filter</h1>
-        <ul class="list-filter">
+        <ul class="list-filter list">
           <li class="item-filter">
             <button class="button-filter" type="button">All</button>
           </li>
