--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li class="address-item">
             <a class="address-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
