прибрала позначки списків

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
 
       <!-- секція картинок -->
       <section class="img">
-        <ul class="list-img">
+        <ul class="list-img list">
           <li class="item-img">
             <img
               class="picture-img"
