--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- features section -->
       <section class="features">
         <h2 hidden>Features</h2>
-        <ul class="features-list">
+        <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-title">Strategy</h3>
             <p class="features-text">
@@ -100,7 +100,7 @@
       <!-- what we are doing section -->
       <section class="doing">
         <h2 class="title-doing">What are we doing</h2>
-        <ul class="list-doing">
+        <ul class="list-doing list">
           <li class="item-doing">
             <img
               class="img-doing"
@@ -134,7 +134,7 @@
       <!-- team section -->
       <section class="team">
         <h2 class="title-team">Our Team</h2>
-        <ul class="list-team">
+        <ul class="list-team list">
           <li class="item-team">
             <img
               class="img-team"
