білий колір в bgc 4 секції

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
         </ul>
       </section>
 
-      <!-- секція картинок -->
+      <!-- секція main -->
       <section class="img">
         <ul class="list-img list">
           <li class="item-img">
