--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo link" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
+        <a class="header-logo link" href="./index.html"
+          >Web<span class="header-logo-text">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item">
             <a class="header-link-active" href="./index.html">Studio</a>
@@ -185,9 +187,8 @@
 
     <!-- footer block -->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
-        ><span class="logo-footer-text">Web</span>Studio</a
-      >
+      <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-text">Studio</span>
+        </a   >
       <p class="clogan-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
