корегування футера в лого

--- a/portfolio.html
+++ b/portfolio.html
@@ -185,9 +185,8 @@
 
     <!-- footer block -->
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
-        ><span class="logo-footer-text">Web</span>Studio</a
-      >
+      <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-text">Studio</span>
+        </a   >
       <p class="clogan-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
