--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link-active" href="./index.html">Studio</a>
+            <a class="header-link-active link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link" href="./portfolio.html">Portfolio</a>
