--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,15 @@
     <!-- header block -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo link" href="./index.html">Web<span class="header-logo-text">Studio</span></a>
+        <a class="header-logo link" href="./index.html"
+          >Web<span class="header-logo-text">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
+            <a class="header-link-active link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link-active" href="./portfolio.html">Portfolio</a>
+            <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
             <a class="header-link" href="">Contacts</a>
