корегування секції в портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,17 +77,19 @@
             <button class="button-filter" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="list-img list">
+        <ul class="img list">
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/banking.jpg"
-              alt="Banking Application"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Banking App Interface Concept</h2>
-            <p class="text-img">App</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/banking.jpg"
+                alt="Banking Application"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Banking App Interface Concept</h2>
+              <p class="text-img">App</p>
+            </a>
           </li>
           <li class="item-img">
             <img
@@ -183,8 +185,9 @@
 
     <!-- footer block -->
     <footer class="footer">
-      <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-text">Studio</span>
-        </a   >
+      <a class="logo-footer link" href="./index.html"
+        >Web<span class="logo-footer-text">Studio</span>
+      </a>
       <p class="clogan-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
