--- a/portfolio.html
+++ b/portfolio.html
@@ -92,15 +92,17 @@
             </a>
           </li>
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/cashlesspayment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Cashless Payment</h2>
-            <p class="text-img">Marketing</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/cashlesspayment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Cashless Payment</h2>
+              <p class="text-img">Marketing</p>
+            </a>
           </li>
           <li class="item-img">
             <img
