додала посилання в список

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,61 +105,72 @@
             </a>
           </li>
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/mtditation.jpg"
-              alt="Application for meditation"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Meditation App</h2>
-            <p class="text-img">App</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/mtditation.jpg"
+                alt="Application for meditation"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Meditation App</h2>
+              <p class="text-img">App</p>
+            </a>
           </li>
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/taxi.jpg"
-              alt="taxi"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Taxi Service</h2>
-            <p class="text-img">Marketing</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/taxi.jpg"
+                alt="taxi"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Taxi Service</h2>
+              <p class="text-img">Marketing</p>
+            </a>
           </li>
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/screen.jpg"
-              alt="smartphone"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Screen Illustrations</h2>
-            <p class="text-img">Design</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/screen.jpg"
+                alt="smartphone"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Screen Illustrations</h2>
+              <p class="text-img">Design</p>
+            </a>
           </li>
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/online.jpg"
-              alt="girl with headphones"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Online Courses</h2>
-            <p class="text-img">Marketing</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/online.jpg"
+                alt="girl with headphones"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Online Courses</h2>
+              <p class="text-img">Marketing</p>
+            </a>
           </li>
           <li class="item-img">
-            <img
-              class="picture-img"
-              src="./images/portfolio/instagram.jpg"
-              alt="image of a home control application"
-              width="360"
-              height="300"
-            />
-            <h2 class="title-img">Instagram Stories Concept</h2>
-            <p class="text-img">Design</p>
+            <a class="link-img link" href="">
+              <img
+                class="picture-img"
+                src="./images/portfolio/instagram.jpg"
+                alt="image of a home control application"
+                width="360"
+                height="300"
+              />
+              <h2 class="title-img">Instagram Stories Concept</h2>
+              <p class="text-img">Design</p>
+            </a>
           </li>
           <li class="item-img">
+            <a class="link-img link" href="">
             <img
               class="picture-img"
               src="./images/portfolio/organic.jpg"
@@ -169,8 +180,10 @@
             />
             <h2 class="title-img">Organic Food</h2>
             <p class="text-img">Web Site</p>
+          </a>
           </li>
           <li class="item-img">
+            <a class="link-img link" href="">
             <img
               class="picture-img"
               src="./images/portfolio/cofee.jpg"
@@ -180,6 +193,7 @@
             />
             <h2 class="title-img">Fresh Coffee</h2>
             <p class="text-img">Web Site</p>
+          </a>
           </li>
         </ul>
       </section>
